Fix layout issue

--- a/client/src/components/shared/Layout/Layout.css
+++ b/client/src/components/shared/Layout/Layout.css
@@ -10,3 +10,7 @@
     flex: 2;
     padding: 100px;
 }
+
+a {
+    text-decoration: none;
+}
